--- a/templates/products.html
+++ b/templates/products.html
@@ -498,7 +498,7 @@ content%}
 <div class="container mt-5" id="moreproducts">
   <div class="row g-3">
     <div class="col-12 col-md-4">
-      <div class="card h-100">
+      <div class="card h-100 pop-image border-0">
         <img src="static/plumbing.jpg" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Plumbing and Sanitary</h5>
@@ -516,7 +516,7 @@ content%}
       </div>
     </div>
     <div class="col-12 col-md-4">
-      <div class="card h-100">
+      <div class="card h-100 pop-image border-0">
         <img src="static/paint.jpg" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Paints and Finishes</h5>
@@ -536,7 +536,7 @@ content%}
       </div>
     </div>
     <div class="col-12 col-md-4">
-      <div class="card h-100">
+      <div class="card h-100 pop-image border-0">
         <img src="static/improvements.jpg" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Home Improvement & Fixtures</h5>
