--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,8 @@
   <body>
     <div class="top-nav"><p class="text-center">TROPIC&reg;</p></div>
     <!-- class="mt-5" -->
-    <div class="">
-      <nav class="navbar navbar-expand-lg bg-black sticky">
+    <div>
+      <nav class="navbar navbar-expand-lg bg-white sticky">
         <div class="container-fluid">
           <a class="navbar-brand text-warning fw-bold fs-5" href="/">TROPIC</a>
           <button
@@ -67,7 +67,7 @@
             <ul class="navbar-nav gap-3">
               <li class="nav-item" id="ulli">
                 <a
-                  class="nav-link active p-3 hover-underline"
+                  class="nav-link active p-3 box text-primary"
                   id="pro"
                   aria-current="page"
                   href="/"
@@ -78,32 +78,32 @@
               {% if session.email %}
               <li class="nav-item" id="ulli">
                 <a
-                  class="nav-link p-3 hover-underline"
+                  class="nav-link p-3 box text-primary"
                   id="pro"
                   href="/products"
                   >Products</a
                 >
               </li>
               <li class="nav-item" id="ulli">
-                <a class="nav-link p-3 hover-underline" id="pro" href="/stock"
+                <a class="nav-link p-3 box text-primary" id="pro" href="/stock"
                   >Stock</a
                 >
               </li>
               <li class="nav-item" id="ulli">
-                <a class="nav-link p-3 hover-underline" id="pro" href="/sales"
+                <a class="nav-link p-3 box text-primary" id="pro" href="/sales"
                   >Sales</a
                 >
               </li>
               <li class="nav-item" id="ulli">
                 <a
-                  class="nav-link p-3 hover-underline"
+                  class="nav-link p-3 box text-primary"
                   id="pro"
                   href="/dashboard"
                   >DashBoard</a
                 >
               </li>
               <li class="nav-item" id="ulli">
-                <a class="nav-link p-3 hover-underline" id="pro" href="/logout"
+                <a class="nav-link p-3 box text-primary" id="pro" href="/logout"
                   >Logout</a
                 >
               </li>
@@ -189,14 +189,14 @@
                     <li style="margin-right: 15px">
                       <a href="#" target="_blank">
                         <i
-                          class="fa-brands fa-facebook-f fa-2xl pop-imag text-black"
+                          class="fa-brands fa-facebook-f fa-xl pop-imag text-black"
                         ></i>
                       </a>
                     </li>
                     <li style="margin-right: 15px">
                       <a href="#" target="_blank">
                         <i
-                          class="fa-brands fa-instagram fa-2xl pop-imag text-black"
+                          class="fa-brands fa-instagram fa-xl pop-imag text-black"
                         ></i>
                       </a>
                     </li>
@@ -206,28 +206,28 @@
                         target="_blank"
                       >
                         <i
-                          class="fa-brands fa-youtube fa-2xl pop-imag text-black"
+                          class="fa-brands fa-youtube fa-xl pop-imag text-black"
                         ></i>
                       </a>
                     </li>
                     <li style="margin-right: 15px">
                       <a href="#" target="_blank">
                         <i
-                          class="fa-brands fa-x-twitter fa-2xl pop-imag text-black"
+                          class="fa-brands fa-x-twitter fa-xl pop-imag text-black"
                         ></i>
                       </a>
                     </li>
                     <li style="margin-right: 15px">
                       <a href="#" target="_blank">
                         <i
-                          class="fa-brands fa-linkedin-in fa-2xl pop-imag text-black"
+                          class="fa-brands fa-linkedin-in fa-xl pop-imag text-black"
                         ></i>
                       </a>
                     </li>
                     <li style="margin-right: 15px">
                       <a href="#" target="_blank">
                         <i
-                          class="fa-brands fa-tiktok fa-2xl pop-imag text-black"
+                          class="fa-brands fa-tiktok fa-xl pop-imag text-black"
                         ></i>
                       </a>
                     </li>
@@ -237,18 +237,18 @@
                   <ul class="list-unstyled" style="display: flex">
                     <li style="margin-right: 15px">
                       <a href="#"
-                        ><i class="fa-brands fa-cc-visa fa-2xl pop-imag"></i
+                        ><i class="fa-brands fa-cc-paypal fa-xl pop-imag text-black"></i
                       ></a>
                     </li>
                     <li style="margin-right: 15px">
                       <a href="#"
-                        ><i class="fa-brands fa-cc-visa fa-2xl pop-imag"></i
+                        ><i class="fa-brands fa-cc-visa fa-xl pop-imag text-black"></i
                       ></a>
                     </li>
                     <li style="margin-right: 15px">
                       <a href="#"
                         ><i
-                          class="fa-brands fa-cc-mastercard fa-2xl pop-imag"
+                          class="fa-brands fa-cc-mastercard fa-xl pop-imag text-black"
                         ></i
                       ></a>
                     </li>
