--- a/templates/register.html
+++ b/templates/register.html
@@ -75,7 +75,7 @@ content%}
             By signing up, you agree to our
           </label>
           <div id="invalidCheck3Feedback" class="invalid-feedback">
-            <a href="user-agreement.html" target="_blank">User Agreement</a>.
+            <a href="user-agreement.html" target="_blank">User Agreement</a>
           </div>
         </div>
         <br />
